INCLUDE(GoogleTest)

FILE(GLOB_RECURSE TEST_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*test.cc")
AUX_SOURCE_DIRECTORY(${CMAKE_SOURCE_DIR}/src PIKIWIDB_SRC)

FOREACH (TEST_SOURCE ${TEST_SOURCES})
  GET_FILENAME_COMPONENT(TEST_FILENAME ${TEST_SOURCE} NAME)
  STRING(REPLACE ".cc" "" TEST_NAME ${TEST_FILENAME})

  ADD_EXECUTABLE(${TEST_NAME} ${TEST_SOURCE} ${PIKIWIDB_SRC})

  TARGET_INCLUDE_DIRECTORIES(${TEST_NAME}
    PUBLIC storage
    PUBLIC praft
    PRIVATE ${rocksdb_SOURCE_DIR}
    PRIVATE ${rocksdb_SOURCE_DIR}/include
    PRIVATE ${BRAFT_INCLUDE_DIR}
    PRIVATE ${BRPC_INCLUDE_DIR}
    # PRIVATE ${PROTO_OUTPUT_DIR}
  )
  TARGET_LINK_LIBRARIES(${TEST_NAME} 
    PUBLIC storage
    PUBLIC praft
    PRIVATE gtest
    PRIVATE gtest_main
    PRIVATE fmt
  )
ENDFOREACH()
